# ManiSkill-vitac

./: .gitignore  README.md  pyproject.toml
client/: interface_client.py
deploy_scripts/: infer.py
policy/anytouch/: encoder_jax.py  weight_converter.py
policy/anytouch/CLIP-B-16/: config.json
policy/anytouch/model/: tactile_mae.py  tactile_mae_jax.py
policy/model/common/: normalizer.py
policy/model/diffusion/: conditional_unet1d.py  mask_generator.py  transformer_for_action_diffusion.py  transformer_for_diffusion.py
policy/model/vision/: crop_randomizer.py  multi_image_obs_encoder.py  multimodal_obs_encoder.py  pointnet_multimodal_obs_encoder.py  timm_obs_encoder.py  transformer_obs_encoder.py
policy/scripts/: check_dataset.py  compute_norm_stats.py  convert_raw_to_lerobot_smooth.py  serve_policy.py  train.py
policy/shared_memory/: shared_memory_queue.py  shared_memory_ring_buffer.py  shared_ndarray.py
policy/src/openpi/: transforms.py
policy/src/openpi/models/: anytouch_jax.py  model.py  pi0.py  pi0_config.py
policy/src/openpi/policies/: action_chunk_broker.py  policy.py  policy_config.py  vb_policy_vis.py  vb_policy_vitac.py  vb_single_arm.py  vb_single_vitac.py
policy/src/openpi/training/: config.py  data_loader.py  weight_loaders.py
policy/utils/: pose_util.py
robot_visualization/: README.md
robot_visualization/src/: visualize_lerobot_data.py  viz_3d_enhanced.py  viz_vb_data.py
scripts/: compute_norm_stats.sh  infer.sh  test_single_inf.sh  train.sh
